# mdpi-dbt-project

./: .env.example  .gitignore  .pre-commit-config.yml  .sqlfluff  .sqlfluffignore  README.md  dbt_project.yml  docker-compose.yaml  profiles.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
models/marts/mdpi/: avg_items_per_order_by_location.sql  avg_items_per_order_by_location.yml  monthly_invoiced_variation.sql  monthly_invoiced_variation.yml  product_items_sold_and_avg_price_with_tax.sql  product_items_sold_and_avg_price_with_tax.yml  top_customers_by_month.sql  top_customers_by_month.yml  total_cost_by_supply_and_product_type_2016.sql  total_cost_by_supply_and_product_type_2016.yml
src/mdpi_dbt_project/: __init__.py
