[project]
name = "mdpi-dbt-project"
version = "0.1.0"
description = "MDPI DBT Assessment Project"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "dbt-postgres~=1.9.0",
    "dbt-duckdb~=1.9.4",
    "sqlfluff-templater-dbt~=3.4.2"
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7,<4.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
